--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
-        "phpstan/phpstan": "^0.11.0"
+        "phpstan/phpstan": "^0.11.0",
+        "vimeo/psalm": "^3.0"
     },
     "autoload": {
         "psr-4": { "Lemonad\\": "src/" },
