Extracted some common test callables to functions

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         ]
     },
     "autoload-dev": {
-        "psr-4" : { "Lemonad\\Tests\\": "tests/" }
+        "psr-4" : { "Lemonad\\Tests\\": "tests/" },
+        "files": [
+            "tests/functions.php"
+        ]
     }
 }
